--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "build-css": "node-sass-chokidar src/ -o src/",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "glamor": "^2.20.40",
     "glamorous": "^4.13.1",
     "google-maps-react": "^1.1.0",
+    "hamburgers": "^0.9.3",
     "lodash": "^4.17.10",
     "massive": "^5.0.0",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
     "prop-types": "^15.6.1",
@@ -23,11 +27,15 @@
     "react-scripts": "1.1.4",
     "react-stripe-elements": "^2.0.0",
     "redux": "^4.0.0",
-    "redux-promise-middleware": "^5.1.1"
+    "redux-promise-middleware": "^5.1.1",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
