--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^4.3.1",
     "react-s3": "^1.3.1",
     "react-scripts": "1.1.4",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
