--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.10",
     "massive": "^5.0.0",
     "node-sass-chokidar": "^1.3.0",
+    "nodemailer": "^4.6.7",
     "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-auth0": "^0.6.1",
