--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
-    "build-css": "node-sass-chokidar src/ -o src/",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -31,8 +30,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
-    "stripe": "^6.1.1",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive"
+    "stripe": "^6.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
